refactor(components): make selection-date read-only

--- a/Components/ChangeScheduleDialog/ChangeScheduleDialogCard.axaml
+++ b/Components/ChangeScheduleDialog/ChangeScheduleDialogCard.axaml
@@ -40,6 +40,7 @@
                     <StackPanel Grid.Column="0">
                         <CalendarDatePicker
                             shadui:ControlAssist.Label="Scheduled Date"
+                            shadui:ControlAssist.ReadOnly="True"
                             Width="150"
                             SelectedDate="{CompiledBinding SelectedTrainingDate}" />
                     </StackPanel>
