--- a/Components/AddTrainingScheduleDialog/AddTrainingScheduleDialogCard.axaml
+++ b/Components/AddTrainingScheduleDialog/AddTrainingScheduleDialogCard.axaml
@@ -8,9 +8,9 @@
     xmlns:converters="clr-namespace:AHON_TRACK.Converters"
     x:DataType="viewModels:AddTrainingScheduleDialogCardViewModel"
     mc:Ignorable="d"
-    Width="1550"
+    Width="1465"
     MaxHeight="725"
-    d:DesignWidth="1550"
+    d:DesignWidth="1465"
     d:DesignHeight="655"
     x:Class="AHON_TRACK.Components.AddTrainingScheduleDialog.AddTrainingScheduleDialogCard">
 
@@ -66,7 +66,7 @@
                     Text="Add a new training schedule for your trainee"
                     Classes="Muted" />
                 <shadui:Card Margin="0,10,0,0" MaxHeight="595" HasShadow="True">
-                    <Grid ColumnDefinitions="Auto Auto" ColumnSpacing="50">
+                    <Grid ColumnDefinitions="Auto Auto" ColumnSpacing="30">
                         <StackPanel Grid.Column="0" Spacing="20" HorizontalAlignment="Left">
                             <TextBox
                                 Width="400"
@@ -170,36 +170,36 @@
                                 </DataGrid.Columns>
                             </DataGrid>
                         </StackPanel>
-                        <shadui:Card Grid.Column="1" Width="450" HasShadow="True">
-                            <StackPanel>
+                        <shadui:Card Grid.Column="1" Width="380" HasShadow="True">
+                            <StackPanel HorizontalAlignment="Center">
                                 <shadui:CardTitle Content="Set the schedule here"/>
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <CalendarDatePicker 
                                         HorizontalAlignment="Left"
                                         shadui:ControlAssist.Label="Date of Training"
                                         shadui:ControlAssist.ReadOnly="True"
-                                        Width="150"
+                                        Width="135"
                                         Margin="0,20"
                                         SelectedDate="{CompiledBinding SelectedTrainingDate}">
                                     </CalendarDatePicker>
                                     <ComboBox 
                                         VerticalAlignment="Top"
                                         Margin="30,20,0,35"
-                                        Width="200"
+                                        Width="150"
                                         PlaceholderText="Pick a coach"
                                         shadui:ControlAssist.Label="Assign Coach"
                                         ItemsSource="{CompiledBinding CoachItems}"
                                         SelectedItem="{CompiledBinding SelectedCoachItem, Mode=TwoWay}">
                                     </ComboBox>
                                 </StackPanel>
-                                <StackPanel Spacing="10" Margin="0,0,0,0" HorizontalAlignment="Left">
+                                <StackPanel Spacing="10" Margin="0,0,0,0" HorizontalAlignment="Center">
                                     <TimePicker 
-                                        Width="255"
+                                        Width="310"
                                         shadui:ControlAssist.Label="Start Time"
                                         shadui:ControlAssist.Hint="Set the beginning time"
                                         SelectedTime="{CompiledBinding StartTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}"/>
                                     <TimePicker 
-                                        Width="255"
+                                        Width="310"
                                         shadui:ControlAssist.Label="End Time"
                                         shadui:ControlAssist.Hint="Set the cut-off time"
                                         SelectedTime="{CompiledBinding EndTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}"/>
@@ -207,15 +207,32 @@
                             </StackPanel>
                             <shadui:Card.Footer>
                                 <StackPanel Orientation="Horizontal" Spacing="15" HorizontalAlignment="Right">
-                                    <Button 
-                                        Classes="Secondary" 
-                                        Content="Cancel" 
-                                        Command="{CompiledBinding CancelCommand}"/>
+                                    <Button
+                                        Classes="Secondary"
+                                        Command="{CompiledBinding CancelCommand}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Svg
+                                                Width="20"
+                                                Height="20"
+                                                Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/cancel-icon.svg"
+                                                VerticalAlignment="Center"
+                                                Margin="0,0,10,0" />
+                                            <TextBlock Text="Cancel" VerticalAlignment="Center" />
+                                        </StackPanel>
+                                    </Button>
                                     <Button 
                                         Classes="Primary" 
-                                        Content="Submit" 
-                                        Padding="30,0,30,0"
-                                        Command="{CompiledBinding SubmitCommand}"/>
+                                        Command="{CompiledBinding SubmitCommand}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Svg
+                                                Width="20"
+                                                Height="20"
+                                                Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/add-schedule-icon.svg"
+                                                VerticalAlignment="Center"
+                                                Margin="0,0,10,0"/>
+                                            <TextBlock Text="Submit" VerticalAlignment="Center"/>
+                                        </StackPanel>
+                                    </Button>
                                 </StackPanel>
                             </shadui:Card.Footer>
                         </shadui:Card>
