--- a/Views/GymAttendanceView.axaml
+++ b/Views/GymAttendanceView.axaml
@@ -4,6 +4,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
+    xmlns:dashboard="clr-namespace:AHON_TRACK.Components.Dashboard"
+    xmlns:scroll="using:Xaml.Behaviors.Interactions.Animated"
     xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
     xmlns:converters="clr-namespace:AHON_TRACK.Converters"
     xmlns:viewModels="clr-namespace:AHON_TRACK.ViewModels"
@@ -12,11 +14,11 @@
     x:DataType="viewModels:GymAttendanceViewModel"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
     x:Class="AHON_TRACK.Views.GymAttendanceView">
-    
+
     <Design.DataContext>
         <viewModels:GymAttendanceViewModel />
     </Design.DataContext>
-    
+
     <UserControl.Resources>
         <SolidColorBrush x:Key="MutedColor" Color="#2C2F36" Opacity="0.70" />
         <SolidColorBrush x:Key="FontForeground" Color="#2C2F36" />
@@ -36,7 +38,7 @@
         <converters:DateToStringConverter x:Key="DateToStringConverter" />
         <converters:StringToPaintConverter x:Key="StringToPaintConverter" />
     </UserControl.Resources>
-    
+
     <DockPanel LastChildFill="True">
         <StackPanel
             MaxWidth="{StaticResource PageMaxWidth}"
@@ -57,16 +59,16 @@
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
             <StackPanel MaxWidth="{StaticResource PageMaxWidth}" Margin="90,10,90,0" Spacing="16">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="15">
-                    <CalendarDatePicker 
+                    <CalendarDatePicker
                         shadui:ControlAssist.Label="From"
                         shadui:ControlAssist.ReadOnly="True"
-                        SelectedDate="" />
-                    <CalendarDatePicker 
+                        SelectedDate="{CompiledBinding AttendanceGroupSelectedFromDate}" />
+                    <CalendarDatePicker
                         shadui:ControlAssist.Label="To"
                         shadui:ControlAssist.ReadOnly="True"
-                        SelectedDate="" />
-                    <Button 
-                        Classes="Primary" 
+                        SelectedDate="{CompiledBinding AttendanceGroupSelectedToDate}" />
+                    <Button
+                        Classes="Primary"
                         VerticalAlignment="Bottom">
                         <StackPanel Orientation="Horizontal">
                             <Svg
@@ -74,11 +76,153 @@
                                 Height="20"
                                 Path="avares://AHON_TRACK/Assets/GymDemographicsView/download-icon.svg"
                                 VerticalAlignment="Center"
-                                Margin="0,0,8,0"/>
-                            <TextBlock Text="Download" VerticalAlignment="Center"/>
+                                Margin="0,0,8,0" />
+                            <TextBlock Text="Download" VerticalAlignment="Center" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <Interaction.Behaviors>
+                        <scroll:VerticalScrollViewerAnimatedBehavior />
+                    </Interaction.Behaviors>
+                    <StackPanel>
+                        <UniformGrid Margin="-6,0" Columns="4">
+                            <UniformGrid.Resources>
+                                <LinearGradientBrush
+                                    x:Key="GreenGradient"
+                                    StartPoint="0%,50%"
+                                    EndPoint="100%, 50%">
+                                    <GradientStop Color="#22C55E" Offset="0.0" />
+                                    <GradientStop Color="#4CAF50" Offset="1.0" />
+                                </LinearGradientBrush>
+
+                                <LinearGradientBrush
+                                    x:Key="BlueGradient"
+                                    StartPoint="0%,50%"
+                                    EndPoint="100%,50%">
+                                    <GradientStop Color="#64B5F6" Offset="0.0" />
+                                    <GradientStop Color="#2196F3" Offset="1.0" />
+                                </LinearGradientBrush>
+
+                                <LinearGradientBrush
+                                    x:Key="OrangeGradient"
+                                    StartPoint="0%,50%"
+                                    EndPoint="100%,50%">
+                                    <GradientStop Color="#FFB74D" Offset="0.0" />
+                                    <GradientStop Color="#FF9800" Offset="1.0" />
+                                </LinearGradientBrush>
+
+                                <LinearGradientBrush
+                                    x:Key="PurpleGradient"
+                                    StartPoint="0%,50%"
+                                    EndPoint="100%,50%">
+                                    <GradientStop Color="#BA68C8" Offset="0.0" />
+                                    <GradientStop Color="#9C27B0" Offset="1.0" />
+                                </LinearGradientBrush>
+                            </UniformGrid.Resources>
+
+                            <dashboard:OverviewCard
+                                Title="Total Walk-ins"
+                                CardBackground="{StaticResource GreenGradient}"
+                                Foreground="White"
+                                Hint="+96% from last month"
+                                Value="+12">
+                                <dashboard:OverviewCard.Icon>
+                                    <Svg
+                                        Width="30"
+                                        Height="30"
+                                        Path="/Assets/DashboardView/member-subscriptions-icon.svg"
+                                        Opacity="0.5" />
+                                </dashboard:OverviewCard.Icon>
+                            </dashboard:OverviewCard>
+                            <dashboard:OverviewCard
+                                Title="Total Gym Members"
+                                CardBackground="{StaticResource BlueGradient}"
+                                Foreground="White"
+                                Hint="+16% from last month"
+                                Value="+18">
+                                <dashboard:OverviewCard.Icon>
+                                    <Svg
+                                        Width="30"
+                                        Height="30"
+                                        Path="/Assets/DashboardView/member-subscriptions-icon.svg" />
+                                </dashboard:OverviewCard.Icon>
+                            </dashboard:OverviewCard>
+                            <dashboard:OverviewCard
+                                Title="Total Customers"
+                                CardBackground="{StaticResource PurpleGradient}"
+                                Foreground="White"
+                                Hint="+16% from last month"
+                                Value="+69">
+                                <dashboard:OverviewCard.Icon>
+                                    <Svg
+                                        Width="30"
+                                        Height="30"
+                                        Path="/Assets/DashboardView/member-subscriptions-icon.svg" />
+                                </dashboard:OverviewCard.Icon>
+                            </dashboard:OverviewCard>
+                            <dashboard:OverviewCard
+                                Title="Active Now"
+                                CardBackground="{StaticResource OrangeGradient}"
+                                Foreground="White"
+                                Hint="+26 since last hour"
+                                Value="+9">
+                                <dashboard:OverviewCard.Icon>
+                                    <Svg
+                                        Width="30"
+                                        Height="30"
+                                        Path="/Assets/DashboardView/active-now-icon.svg" />
+                                </dashboard:OverviewCard.Icon>
+                            </dashboard:OverviewCard>
+                        </UniformGrid>
+                        <Grid RowDefinitions="* *" ColumnDefinitions="2* *" ColumnSpacing="30" Margin="0,15,0,0">
+                            <shadui:Card Grid.Row="0" Grid.Column="0" HasShadow="True" VerticalAlignment="Top">
+                                <StackPanel>
+                                    <shadui:CardTitle 
+                                        Content="Gym Attendance Report" 
+                                        FontSize="20"
+                                        FontWeight="SemiBold" />
+                                    <lvc:CartesianChart
+                                        Height="330"
+                                        Series="{CompiledBinding AttendanceSeriesCollection}"
+                                        XAxes="{CompiledBinding AttendanceLineChartXAxes}"
+                                        LegendPosition="Bottom">
+                                    </lvc:CartesianChart>
+                                </StackPanel>
+                            </shadui:Card>
+                            <shadui:Card Grid.Row="0" Grid.Column="1" HasShadow="True" VerticalAlignment="Top">
+                                <StackPanel>
+                                    <shadui:CardTitle 
+                                        Content="Walk-ins vs. Members" 
+                                        FontSize="20"
+                                        FontWeight="SemiBold" />
+                                    <lvc:PieChart
+                                        Height="430"
+                                        InitialRotation="130"
+                                        LegendPosition="Bottom"
+                                        SeriesSource="{CompiledBinding CustomerTypePieDataCollection}">
+                                        <lvc:PieChart.SeriesTemplate>
+                                            <DataTemplate x:DataType="viewModels:CustomerPieData">
+                                                <lvc:XamlPieSeries
+                                                    SeriesName="{Binding Name}"
+                                                    Values="{Binding Values}"
+                                                    Stroke="{lvc:SolidColorPaint Color='#fff', StrokeWidth=2}"
+                                                    Fill="{Binding Color, Converter={StaticResource StringToPaintConverter}}"
+                                                    HoverPushout="15"
+                                                    DataLabelsFormatter="{Binding Formatter}"
+                                                    DataLabelsSize="15"
+                                                    ShowDataLabels="{Binding IsTotal}"
+                                                    DataLabelsPosition="Outer"
+                                                    IsVisibleAtLegend="{Binding IsTotal}" >
+                                                </lvc:XamlPieSeries>
+                                            </DataTemplate>
+                                        </lvc:PieChart.SeriesTemplate>
+                                    </lvc:PieChart>
+                                </StackPanel>
+                            </shadui:Card>
+                        </Grid>
+                    </StackPanel>
+                </ScrollViewer>
             </StackPanel>
         </ScrollViewer>
     </DockPanel>
